# saponin-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/rl/: README.md  rl_epoch1.toml  rl_epoch4.toml  rl_ic50_epoch4.toml  rl_ic50_generic_challenge.toml  rl_ic50_generic_challenge_v2.toml  rl_ic50_generic_extended.toml  rl_light_saponins.toml  (+7 more)
data/: saponin_train_3k.smi  saponin_train_46k_block1.smi  saponin_train_46k_block2.smi  saponin_train_46k_block3.smi  saponin_train_46k_block4.smi
metrics/: e1_vs_e4_ic50.json  e1_vs_e4_npc.json  ic50_rl_comparison.json  ic50_rl_v3_comparison.json
priors/: README.md
references/: 46k_pure_nll_block_chain.md  dot-to-pipe-bug-investigation.md  e1_vs_e4_rl_comparison.md  fcd_npclassifier_api.md  generic_ic50_challenge_design.md  generic_ic50_challenge_v2.md  generic_rl_extrapolation_limits.md  generic_rl_super_extended.md  ic50_consensus_screening.md  rl_scoring_transform.md  sample_naming_convention.md  unified_comparison_workflow.md
reports/: 46k_formal_prior_2epoch_4block_reg.md  46k_prior_epoch_comparison.md  generic_ic50_challenge_design.md  generic_ic50_challenge_retry.md  generic_ic50_comparison_table.md  rl_ic50_optimisation_report.md  saponin_ic50_rl_E1_vs_E4.md  unified_analysis_interpretation.md
scripts/: analyze_100k.py  analyze_rl_v3_final.py  compare_e1_vs_e4.py  compare_rl_ic50.py  compute_epoch_metrics.py  compute_fcd_npc.py  compute_npc_quick.py  gen_results_pdf.py  overnight_coordinator.py  pca_umap_analysis.py  saponin_design_pilot.py  smiles_props.py  unified_analysis.py  unified_analysis_fast.py
(+54 files in other folders)
